--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,15 @@
 export(calcFrazier)
 export(calcRecMetrics)
 export(extract_date)
+export(extract_date_fire)
+export(getFireDate)
 export(getRegularTS)
 export(getSegments)
 export(plot_aux)
 export(r80p)
 export(rri)
 export(tidy_data)
+export(tidy_fire_date)
 export(toRegularTS)
 export(yryr)
 import(bfast)
