--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(extract_date_fire)
 export(getFireDate)
 export(getRegularTS)
 export(getSegments)
+export(mmax)
 export(plot_aux)
 export(r80p)
 export(rri)
