--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(tidy_fire_date)
 export(toRegularTS)
 export(yryr)
 import(bfast)
+import(dplyr)
+import(stats)
 import(stringr)
 import(strucchange)
 import(tidyverse)
