check for minimum time span and make sure that 2 subsequent observations of output temporal resolution are present

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(toRegularTS)
 export(yryr)
 import(bfast)
 import(dplyr)
+import(lubridate)
 import(stats)
 import(stringr)
 import(strucchange)
