update ignored files

--- a/inst/testdata/.gitignore
+++ b/inst/testdata/.gitignore
@@ -12,3 +12,5 @@ tidy_fire_samples_forest_fire_nat_n30.Rdata
 seg_samples_forest_fire_nat_n30.Rdata
 tidy_samples_forest_fire_nat_n30.Rdata
 tidy_fire_samples_forest_fire_nat_n30.csv
+Spat_YrYr.png
+Spat_R80p.png
