--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ import(lubridate)
 import(plyr)
 import(readr)
 import(reshape2)
+import(scales)
 import(stats)
 import(stringr)
 import(strucchange)
